--- a/Lab3/WebContent/css/some.html
+++ b/Lab3/WebContent/css/some.html
@@ -1,43 +1,43 @@
 <html>
 	<head>
-	<link rel="stylesheet" type="text/css" href="structure.css" />	
+
+	<!-- Bootstrap core CSS -->
+	<link href="MDB_Free/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+	<!-- Material Design Bootstrap -->
+	<link href="MDB_Free/css/mdb.min.css" type="text/css" rel="stylesheet">
+	<!-- Your custom styles (optional) -->
+	<link href="MDB_Free/css/style.css" type="text/css" rel="stylesheet">
+	<link href="structure.css" type="text/css" rel="stylesheet">
+	<link href="MDB_Free/css/addons_mdb.css" type="text/css" rel="stylesheet">
+	
+
 	</head>
 	<body>
-		<div id="header" class="navbar-wrapper">
-			<div class="container-fluid">
-				<nav class="navbar navbar-fixed-top">
-				    <div class="container">
-				        <div class="navbar-header">
-				            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				            <span class="sr-only">Toggle navigation</span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            </button>
-				            <a class="navbar-brand" href="#"><img alt="Logo" src="/images/logo.jpg" /></a>
-				        </div>
-				        <div id="navbar" class="navbar-collapse collapse">
-				            <ul class="nav navbar-nav">
-				                <li class=" dropdown"><a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tweets <span class="caret"></span></a>
-				                    <ul class="dropdown-menu">
-				                        <li><a href="#">All tweets</a></li>
-				                        <li><a href="#">Only follow</a></li>
-				                    </ul>
-				                </li>
-				            </ul>
-				            <ul class="nav navbar-nav pull-right">
-				                <li class=" dropdown"><a href="#" class="dropdown-toggle " data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My profile<span class="caret"></span></a>
-				                    <ul class="dropdown-menu">
-				                        <li><a href="#">Public profile</a></li>
-				                        <li><a href="#">Account settings</a></li>
-				                    </ul>
-				                </li>
-				                <li class=""><a class="menu" id="LogoutController" href="#">Logout</a></li>
-				            </ul>
-				        </div>
-				    </div>
-				</nav>
+
+
+		
+		<!--Card-->
+		<div class="card testimonial-card">
+
+			<!--Bacground color-->
+			<div class="card-up default-color-dark">
 			</div>
+
+			<!--Avatar-->
+			<div class="avatar"><img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%288%29.jpg" class="rounded-circle img-responsive">
+			</div>
+
+			<div class="card-block">
+				<!--Name-->
+				<h4 class="card-title">Anna Doe</h4>
+				<hr>
+				<!--Quotation-->
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, adipisci</p>
+			</div>
+
 		</div>
+		<!--/.Card-->
+
+
 	<body>
 </html>
